feat: tomcat agent support jdk6